// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Allow load custom resources > md2html with metadata > filelist 1`] = `
"[
  ".yfm",
  "index.html",
  "page.html",
  "project/config.html",
  "toc.js"
]"
`;

exports[`Allow load custom resources > md2html with metadata 1`] = `
"mtimes: true
"
`;

exports[`Allow load custom resources > md2html with metadata 2`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Documentation | Documentation</title>
        <meta http-equiv="last-modified" content="2025-10-15T00:00:00.000Z">
        <meta property="article:modified_time" content="2025-10-15T00:00:00.000Z">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="test-yfm" content="inline test">
        <meta name="yfm-config" content="config test">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":true,"data":{"title":"Documentation","description":"","links":[{"title":"Getting started with Documentation","description":"This guide will show you the basics of working with Documentation","href":"page.html"}]},"meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"}],"title":"Documentation","noIndex":true,"vcsPath":"index.yaml","updatedAt":"2025-10-15T00:00:00.000Z"},"title":"Documentation"},"router":{"pathname":"index","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html with metadata 3`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="./" />
        <title>Page Title | Documentation</title>
        <meta http-equiv="last-modified" content="2025-10-15T00:00:00.000Z">
        <meta property="article:modified_time" content="2025-10-15T00:00:00.000Z">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="test-yfm" content="inline test">
        <meta name="yfm-config" content="config test">
        <meta name="yfm" content="builder in page">
        <meta property="og:title" content="Some kind of headline">
        <meta name="description" content="Some test description">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
        <link rel="icon" type="image/x-icon" href="/favicon.ico">
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"},{"name":"yfm","content":"builder in page"},{"property":"og:title","content":"Some kind of headline"},{"name":"description","content":"Some test description"}],"title":"Page Title","description":"Some test description","interface":{"toc":false,"favicon-src":"/favicon.ico"},"vcsPath":"page.md","updatedAt":"2025-10-15T00:00:00.000Z"},"headings":[],"title":"Page Title"},"router":{"pathname":"page","depth":1,"base":"./"},"lang":"ru","langs":["ru"],"viewerInterface":{"toc":false,"search":true,"feedback":true,"favicon-src":"/favicon.ico"}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html with metadata 4`] = `
"<!DOCTYPE html>
<html lang="ru" dir="ltr">
    <head>
        <meta charset="utf-8">
        <meta name="viewport" content="width=device-width, initial-scale=1.0">
        <base href="../" />
        <title>Documentation</title>
        <meta http-equiv="last-modified" content="2025-10-15T00:00:00.000Z">
        <meta property="article:modified_time" content="2025-10-15T00:00:00.000Z">
        <meta name="generator" content="Diplodoc Platform vDIPLODOC-VERSION">
        <meta name="test-yfm" content="inline test">
        <meta name="yfm-config" content="config test">
        <meta name="yfm" value="builder in config">
        <style type="text/css">html, body {min-height:100vh; height:100vh;}</style>
    </head>
    <body class="g-root g-root_theme_light">
        <div id="root"></div>
        <script type="application/json" id="diplodoc-state">
            {"data":{"leading":false,"html":"&lt;p&gt;Lorem&lt;/p&gt;/n","meta":{"metadata":[{"name":"generator","content":"Diplodoc Platform vDIPLODOC-VERSION"},{"name":"test-yfm","content":"inline test"},{"name":"yfm-config","content":"config test"},{"name":"yfm","value":"builder in config"}],"vcsPath":"project/config.md","updatedAt":"2025-10-15T00:00:00.000Z"},"headings":[],"title":""},"router":{"pathname":"project/config","depth":2,"base":"../"},"lang":"ru","langs":["ru"],"viewerInterface":{"toc":true,"search":true,"feedback":true}}
        </script>
        <script type="application/javascript">
            const data = document.querySelector('script#diplodoc-state');
            window.__DATA__ = JSON.parse((function unescape(string) {
                return string.replace(/&lt;/g, "<").replace(/&gt;/g, ">").replace(/&amp;/g, "&");
              })(data.innerText));
            window.STATIC_CONTENT = false;
        </script>
        <script type="application/javascript" defer src="toc.js"></script>
    </body>
</html>"
`;

exports[`Allow load custom resources > md2html with metadata 5`] = `"window.__DATA__.data.toc = {"title":"Documentation","href":"index.html","items":[{"name":"Documentation","href":"page.html","id":"UUID"},{"name":"Config","href":"project/config.html","id":"UUID"}],"path":"toc.yaml","id":"UUID"};"`;

exports[`Allow load custom resources > md2md with metadata > filelist 1`] = `
"[
  "index.yaml",
  "page.md",
  "project/config.md",
  "toc.yaml"
]"
`;

exports[`Allow load custom resources > md2md with metadata 1`] = `
"title: Documentation
description: ''
meta:
  metadata:
    - name: generator
      content: Diplodoc Platform vDIPLODOC-VERSION
    - name: test-yfm
      content: inline test
    - name: yfm-config
      content: config test
  title: Documentation
  noIndex: true
  vcsPath: index.yaml
links:
  - title: Getting started with Documentation
    description: This guide will show you the basics of working with Documentation
    href: page.md
"
`;

exports[`Allow load custom resources > md2md with metadata 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
  - name: test-yfm
    content: inline test
  - name: yfm-config
    content: config test
  - name: yfm
    content: builder in page
title: Page Title
description: Some test description
interface:
  toc: false
  favicon-src: /favicon.ico
vcsPath: page.md
---

Lorem"
`;

exports[`Allow load custom resources > md2md with metadata 3`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
  - name: test-yfm
    content: inline test
  - name: yfm-config
    content: config test
  - name: yfm
    value: builder in config
vcsPath: project/config.md
---

Lorem"
`;

exports[`Allow load custom resources > md2md with metadata 4`] = `
"title: Documentation
href: index.yaml
items:
  - name: Documentation
    href: page.md
  - name: Config
    href: project/config.md
path: toc.yaml
"
`;
